# wordwang

./: .gitignore  Makefile  README.md  dev.py  statics.py  wordwang.sublime-project
client/: index.html  main.coffee  test.html
client/css/: style.styl
client/js/: fixtures.coffee  suggestion.coffee  suggestions.coffee
client/test/: protocol.coffee  schemas.coffee
server/: .gitignore  Makefile  Objects.hs  Server.hs  test.html  wordwang.cabal  wordwang.hs
server/Test/: WangTests.hs
server/html/: index.html
server/src/: Common.hs  Log.hs  Objects.hs
test/: example-test.coffee
