Name:           wordwang
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Team Oryx Raptor
Maintainer:     mail@nh2.com
Homepage:       https://github.com/nh2/wordwang
Category:       Web
Synopsis:       I like turtles
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Source-repository head
  Type:                 git
  Location:             https://github.com/nh2/wordwang

Executable wordwang
  Build-depends:        base >= 4 && < 5,
                        SHA,
                        aeson,
                        ansi-terminal,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        ghc-prim,
                        hashable,
                        hslogger,
                        mtl,
                        random,
                        stm,
                        text,
                        time,
                        unix,
                        unordered-containers,
                        websockets
  Ghc-options:          -Wall -Werror
  Main-is:              wordwang.hs
