Name:           wordwang
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Team Oryx Raptor
Maintainer:     mail@nh2.com
Homepage:       https://github.com/nh2/wordwang
Category:       Web
Synopsis:       I like turtles
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Source-repository head
  Type:                 git
  Location:             https://github.com/nh2/wordwang

Library
  Hs-Source-Dirs:       src
  Build-depends:        base >= 4 && < 5,
                        SHA,
                        aeson,
                        ansi-terminal,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        ghc-prim,
                        hashable,
                        hslogger,
                        mtl,
                        random,
                        stm,
                        text,
                        time,
                        unordered-containers,
                        websockets
  Exposed-modules:      Server, Objects, Common
  Ghc-options:          -Wall

Executable wordwang
  Build-depends:        base >= 4 && < 5,
                        filepath,
                        hslogger,
                        unix,
                        wordwang
  Ghc-options:          -Wall
  Main-is:              wordwang.hs

Test-suite gold
  Hs-Source-Dirs:       test
  Main-Is:              WangTests.hs
  Type:                 exitcode-stdio-1.0
  Build-depends:        base >= 4 && < 5,
                        websockets,
                        wordwang
  Ghc-Options:          -Wall

  Build-Depends:        bytestring,
                        test-framework,
                        test-framework-hunit,
                        HUnit
